endpoint: link profile (uncomplete: get verification code)
