# src/api/swagger/swagger.yaml
@@ -161,6 +161,26 @@ paths:
           $ref: "#/components/responses/Generic404NotFound"
         default:
           $ref: "#/components/responses/Generic500Error"
+
+  /patients/{id}/link-profile:
+    put:
+      summary: Link profile.
+      description: Links the given patient profile to the provided email if the link code is valid.
+      tags:
+        - Patient profile
+      responses:
+        '200':
+          description: Ok. Profile successfully linked.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Patient'
+        '400':
+          $ref: "#/components/responses/Generic400BadRequest"
+        '403':
+          $ref: "#/components/responses/Generic403Forbbiden"
+        default:
+          $ref: "#/components/responses/Generic500Error"
     
   /patients/{id}/appointments:
     parameters:
